--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,14 @@
             <version>2.4.4</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>        <!-- TODO write in article that this dependency must be added -->
+            <groupId>cglib</groupId>
+            <artifactId>cglib-nodep</artifactId>
+            <version>2.2</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
 
