--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>        <!-- TODO write in article that this dependency must be added -->
+        <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib-nodep</artifactId>
             <version>2.2</version>
